--- a/hexed.css
+++ b/hexed.css
@@ -1,13 +1,42 @@
-#game {
-	width: 100%;
+h1, p, span {
+	width: 100px;
+	display: block !important;
+	margin: 10px auto;
 	text-align: center;
 }
 
-h1 {
-	margin:auto;
+span {
+	width: 98px;
 }
 
-#difficulty {
+#newGame {
 	width: 100px;
-	height: 1em;
+	display: block;
+	margin: 10px auto;
+}
+
+#Lcolor, #Rcolor {
+	width: 100px;
+	height: 100px;
+	margin: 10px auto;
+}
+
+#red .ui-slider-range, #red .ui-slider-handle {
+	background-color: red;
+}
+
+#green .ui-slider-range, #green .ui-slider-handle {
+	background-color: green;
+}
+
+#blue .ui-slider-range, #blue .ui-slider-handle {
+	background-color: blue;
+}
+
+#red, #blue, #green {
+	margin: 10px auto;
+}
+
+#red .ui-slider-handle, #green .ui-slider-handle, #blue .ui-slider-handle {
+	margin:0;
 }
