--- a/resources/team2-hw2.css
+++ b/resources/team2-hw2.css
@@ -1,3 +1,7 @@
+body {
+	background-image: url("background.jpeg");
+}
+
 #hexed {
 	width: 500px;
 	display: block;
@@ -9,6 +13,7 @@
 	padding: 25px;
 	background-color: black;
 	border-radius: 100px;
+	box-shadow: 0 0 30px 30px #fff;
 }
 
 p, span {
